Changed button for Resume, fixed animation for nav bar and added a small bouncy line on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,9 @@ p {
 .gradient-dusty-cactus {
   background: linear-gradient(90deg, #dad36c 0%, #c67700 100%);
 }
+.gradient-button {
+  background: linear-gradient(75deg, rgba(60,91,115,1) 0%, rgba(23,36,50,1) 50%);
+}
 
 /* Prevents flickering for Scrollreveal animations during page loading */
 html.sr .load-hidden {
@@ -72,5 +75,81 @@ button:focus {
     }
     100% {
       background-position: 0% 50%
+    }
+  }
+
+  /* Bouncing Line */
+  @media only screen and (min-width: 1024px) {
+    .arrow {
+      display: none;
+    }
+  }
+  .arrow {
+    width: 42px;
+    height: 14px;
+    margin: auto;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    opacity: 0.25;
+    transition: ease 1s;
+    -webkit-animation: bouncey 1.6s linear infinite;
+            animation: bouncey 1.6s linear infinite;
+  }
+  .arrow ul {
+    list-style: none;
+  }
+  .arrow ul li {
+    width: 42px;
+    height: 4px;
+    background: black;
+  }
+  .arrow ul li:nth-child(1) {
+    left: 0;
+    top: 0;
+    position: absolute;
+    border-radius: 5px 0 0 5px;
+  }
+  .arrow ul li:nth-child(2) {
+    left: 10px;
+    position: absolute;
+    border-radius: 0 5px 5px 0;
+    top: 0;
+  }
+  .arrow:hover {
+    opacity: 1;
+  }
+
+  @-webkit-keyframes bouncey {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    50% {
+      -webkit-transform: translateY(4px);
+              transform: translateY(4px);
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+  }
+
+  @keyframes bouncey {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    50% {
+      -webkit-transform: translateY(4px);
+              transform: translateY(4px);
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
     }
   }
